@@ -10,7 +10,7 @@ Description: Density surface modelling of line transect data. A Generalized
     of animal abundance from distance sampling (also presence/absence and strip
     transect) data. Several utility functions are provided for model checking,
     plotting and variance estimation.
-Version: 2.3.1.9005
+Version: 2.3.1.9006
 Language: en-GB
 URL: http://github.com/DistanceDevelopment/dsm
 BugReports: https://github.com/DistanceDevelopment/dsm/issues
